--- a/overlays/assets/css/ddr_overlays.css
+++ b/overlays/assets/css/ddr_overlays.css
@@ -431,7 +431,7 @@ body {
     font-weight: 800;
     margin-right: 20px;
     padding-top: 10px;
-    width: 50px;
+    width: 40px;
 }
 
 .pilot_card_avatar {
@@ -455,10 +455,38 @@ body {
     margin-top: 12px;
 }
 
+.pilot_card_pilot {
+    width: 140px;
+    height: 30px;
+    float: left;
+    padding: 8px 0;
+    
+}
+
+.pilot_card_data {
+    height: 60px;
+    padding: 0 0px;
+    float: right;
+    width: calc(100% - 200px);
+}
+
+.pilot_card_data_item {
+    float: right;
+    height: 60px;
+    padding: 0 0px;
+    font-size: 36px;
+    font-weight: 200;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+}
+
 .leaderboard_column {
     width: calc(50vw - 40px);
     padding: 0 20px;
 }
+
+
 
 /* END OF DDR LEADERBOARD */
 
